--- a/code/Rover_Scratch_Space.ipynb
+++ b/code/Rover_Scratch_Space.ipynb
@@ -203,18 +203,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# THIS ABOVE NEEDS TO BE VERIFIED AGAINST BOTH AND OVERHEAD SHOT FROM THE SIM, AS WELL AS IN OTHER, LESS SPACIOUS CONDITIONS"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: Take a second threshold with the colors of the rocks, to create blocked areas|"
+   ]
   },
   {
    "cell_type": "code",
