actual map now exists yay

--- a/code/Rover_Scratch_Space.ipynb
+++ b/code/Rover_Scratch_Space.ipynb
@@ -107,54 +107,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff1e4524f90>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAADKCAYAAACrHYtRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAET5JREFUeJzt3X2sZHV9x/H3p7s8+FQBoZstS8uiGw01VpcNxWiMkapA\njWsTYte0kVoa0oqttjYWNLH6X+2DVpNWsyotNoSHosZNo60UaewfBV3kGURWFNnNwmIVtNpoV7/9\nY87CcDtzH+bhzpkz71dyc2fOnLnzPXPufO7v/ubM+aaqkCR118/MugBJ0nQZ9JLUcQa9JHWcQS9J\nHWfQS1LHGfSS1HFTC/ok5yS5N8m+JJdM63EkScvLNI6jT7IB+BrwSmA/8GXgDVV198QfTJK0rGmN\n6M8E9lXV/VX1Y+AqYOeUHkuStIyNU/q5JwMP9l3fD/zKsJWT+PFcSVq7b1fVSSutNK2gX1GSi4CL\nZvX4ktQBD6xmpWkF/QHglL7rW5plj6uq3cBucEQvSdM0rTn6LwPbkmxNcjSwC9gzpceSJC1jKiP6\nqjqc5C3AvwIbgMuq6q5pPJYkaXlTObxyzUU4dSNJo7i5qnastJKfjJWkjjPoJanjDHpJ6jiDXpI6\nzqCXpI4z6CWp4wx6Seo4g16SOs6gl6SOM+glqeMMeknqOINekjpu5KBPckqSG5LcneSuJG9tlp+Q\n5Lok9zXfj59cuZKktRpnRH8YeHtVnQ6cBVyc5HTgEuD6qtoGXN9clyTNyMhBX1UHq+orzeXvA/fQ\n6xW7E7i8We1y4HXjFilJGt1E5uiTnAq8CLgJ2FRVB5ubHgI2TeIxJEmjGbvDVJKnA58E3lZV30vy\n+G1VVcOaitgcXJLWx1gj+iRH0Qv5K6rqU83ih5Nsbm7fDBwadN+q2l1VO1bTHUWSNLpxjroJ8HHg\nnqp6f99Ne4ALmssXAJ8ZvTxJ0rhG7hmb5KXAfwB3AD9tFr+T3jz9NcAvAA8Ar6+q76zws+wZK0lr\nt6qesTYHl6T5ZXNwSZJBL0mdZ9BLUscZ9JLUcQa9JHWcQS9JHWfQS1LHGfSS1HEGvSR1nEEvSR1n\n0EtSxxn0ktRxYwd9kg1Jbknyz831rUluSrIvydVJjh6/TEnSqCYxon8rvX6xR7wP+EBVPQf4LnDh\nBB5DkjSicTtMbQF+DfhYcz3AK4Brm1VsDi5JMzbuiP5vgHfwROORZwGPVtXh5vp+4OQxH0OSNIZx\nWgm+BjhUVTePeP+LkuxNsnfUGiRJK9s4xn1fArw2yXnAscDPAh8EjkuysRnVbwEODLpzVe0GdoMd\npiRpmkYe0VfVpVW1papOBXYBX6iq3wRuAM5vVrM5uCTN2DSOo/9T4I+T7KM3Z//xKTyGJGmVbA4u\nSfPL5uCSJINekjrPoJekjjPoJanjDHpJ6jiDXpI6zqCXpI4z6CWp4wx6Seo4g16SOs6gl6SOM+gl\nqePGbSV4XJJrk3w1yT1JXpzkhCTXJbmv+X78pIqVJK3duCP6DwL/UlXPA36ZXpPwS4Drq2obcH1z\nXZI0IyOfpjjJM4FbgdOq74ckuRd4eVUdTLIZ+Peqeu4KP8vTFEvS2k39NMVbgUeAv09yS5KPJXka\nsKmqDjbrPARsGuMxJEljGifoNwLbgQ9X1YuAH7BkmqYZ6Q8crdscXJLWxzhBvx/YX1U3NdevpRf8\nDzdTNjTfDw26c1Xtrqodq/m3Q5I0unGagz8EPJjkyPz72cDdwB56TcHB5uCSNHMbx7z/HwBXJDka\nuB94E70/HtckuRB4AHj9mI8hSRqDzcElaX7ZHFySZNBLUucZ9JLUcQa9JHWcQS9JHWfQS1LHGfSS\n1HEGvSR1nEEvSR1n0EtSxxn0ktRxBr0kddy4zcH/KMldSe5McmWSY5NsTXJTkn1Jrm7ObClJmpGR\ngz7JycAfAjuq6vnABmAX8D7gA1X1HOC7wIWTKFSSNJpxp242Ak9JshF4KnAQeAW9blMAlwOvG/Mx\nJEljGKfD1AHgr4Bv0Qv4x4CbgUer6nCz2n7g5HGLlNQNK/W/mGZ/jDb03piVcaZujgd2AluBnwee\nBpyzhvvbHFyasqpa89ekH3vp5eUkmdjjD6tpEY3TSvBXgW9U1SMAST4FvAQ4LsnGZlS/BTgw6M5V\ntRvY3dx3MZ/9jlvUF9W8m/R+W/rzZv17UVWP/0FZWsu0/9DMyjhB/y3grCRPBf6HXnPwvcANwPnA\nVdgcvDVm/eKS2mTY62E9XidJnvTHZj2M1TM2yXuB3wAOA7cAv0tvTv4q4IRm2W9V1Y9W+DlzmUKG\np6RZSrKqnrFz0Ry8DTVKUtusNuhb8cnYM844Y13eHJKkRdSKoJckTY9BL0kdZ9BLUscZ9FILdPX4\nbbWDQS9JHWfQSy1w5OiyJI7uNXEGvdQi/YcUG/iaFINerbbIYWfga1IMerXSsJNOLaL+58DQ1ygM\nerVG//y0AT+Yo3yNYpyzV0oTYbiv3dLA97nTclYc0Se5LMmhJHf2LTshyXVJ7mu+H98sT5IPNY3B\nb0+yfZrFa771h5RBNZojz51H62g5q5m6+Qf+f+eoS4Drq2obcH1zHeBcYFvzdRHw4cmUOXlHXhjL\nfQ27j55s0PMy6PpKz69Gt/TwTJ9j9Vsx6Kvqi8B3lizeSa/xNzy5AfhO4BPVcyO9blObJ1XsJI3S\nUs2R52CDnpdBx4V7ZtLpGvTcGvaC0d+M3VRVB5vLDwGbmssnAw/2rWdz8AV1JOAN9dlZOq1j6C+u\nsY+6qd4reM2v4v7m4I888si4ZagFBo3eNXv9f2wN/MU0atA/fGRKpvl+qFl+ADilb71lm4NX1Y6q\n2nHSSSeNWIbaYOnoXe1l4C+mUYN+D73G3/DkBuB7gDc2R9+cBTzWN8WjDumfDjDg54+Bv1hWPI4+\nyZXAy4ETk+wH/gz4c+CaJBcCDwCvb1b/LHAesA/4IfCmKdSsGfK47W4Z9Kat+7Z7Vgz6qnrDkJvO\nHrBuARePW5TaxRDovkGnWXBfd4efjNVQBvxi8lO33WPQ60mWztf6Il9cw47F93di/hj0cuSuZS0N\nfEf688egX2AGvNZi6Ty+gT8/DPoFZMBrXL55O188H70kdZwj+gXhKF7T4rH47WfQd5wvPq2XYWcs\n1ewZ9B1lwGtWDPz2Meg7xHBXmxj47WHQd4ABrzYbdITO0uWaLoN+DvlJRc0rR/mzMWpz8L9M8tWm\nAfinkxzXd9ulTXPwe5O8elqFL6JhbfmkebO03aGnS56uUZuDXwc8v6peAHwNuBQgyenALuCXmvv8\nXZINE6t2AS19ERju6pJBPW4N/ckbqTl4VX2+qg43V2+k10kKes3Br6qqH1XVN+idl/7MCda7MBy9\na9EMC32NbxKfjP0d4HPN5VU3B7dn7GCO3qXBUzsa3VhBn+RdwGHgirXe156xT3B6RhrMwJ+MkY+6\nSfLbwGuAs+uJVFp1c3B59Iy0WsPC3tfM6ow0ok9yDvAO4LVV9cO+m/YAu5Ick2QrsA340vhldovz\n79JonMcfzajNwS8FjgGua57kG6vq96rqriTXAHfTm9K5uKp+Mq3i54mjd2myPCZ/9dKGJ2bHjh21\nd+/eWZcxcYa7tH4WcUonyc1VtWOl9fxk7BQs4i+cNGvLTecs+uvQoJ8Qf7Gkdlj62nNqx6Afm6N3\nqd2cyzfoR+LoXZo/ixz4Bv0aGPDS/FvEwLc5uCR1nCP6VXAkL3XPIjVEMeiHMNylxdH16RyDfgkD\nXlpcXQ38hQ/6QefJ6MKOlTS6rp1EbWGD3pH7fOjCi0zzqz/w+7/P2+/iwgW9wTEfBv2nlcR9pplY\n+sbtvOXISM3B+257e5JKcmJzPUk+1DQHvz3J9mkUvVY29phP/aekdZ+pLebxVMmjNgcnySnAq4Bv\n9S0+l9456LcBFwEfHr/E0Q36y2tYzAf3k+bBvDQ2H6k5eOMD9JqP9L8idwKfqJ4bgeOSbJ5IpWtg\nwEtaT0szpm2BP2qHqZ3Agaq6bclNM2sOPmx6xoCXtF7aOq2z5qBP8lTgncC7x3ngSTUHd/QuqY3a\nNK0zylE3zwa2Arc1RW8BvpLkTNaxOfi8vestaTG14RDNNY/oq+qOqvq5qjq1qk6lNz2zvaoeotcc\n/I3N0TdnAY9V1cFJFNr/F9GjZyTNm1nO46/m8Morgf8Enptkf5ILl1n9s8D9wD7go8Cbxy1wWFsw\nA17SPJrFPP6KUzdV9YYVbj+173IBF49blJ9albQI1utUC636ZKwBL2kRDZvH779tHGlDmCZ5UhFt\nqEmSZmk1A98kN1fVjpV+VqtG9Aa8JPUMe+N2lJxsRSvBM844w5CXpCHGPSa/FUEvSVrZqEccGvSS\n1HEGvSTNmbWO7A16Seq4Vh5euVZt2AZJWm9zeXjlqNpwGlB1jwMIdUUngl6aBgcQWo15GBC0Yo7+\nyHH0k/ySpPWw9My66/m1Wp0d0Rv2mgRH9eqCzga9NAkOGDRLkxpoGPSS1FIrDTRW+4egLYdXPgL8\nAPj2rGuZoBNxe9qua9vk9rTfpLfpF6tqxabbrQh6gCR7V3M86Lxwe9qva9vk9rTfrLapFUfdSJKm\nx6CXpI5rU9DvnnUBE+b2tF/Xtsntab+ZbFNr5uglSdPRphG9JGkKZh70Sc5Jcm+SfUkumXU9o0ry\nzSR3JLk1yd5m2QlJrktyX/P9+FnXOUySy5IcSnJn37KB9afnQ80+uz3J9tlVPtiQ7XlPkgPNPro1\nyXl9t13abM+9SV49m6qHS3JKkhuS3J3kriRvbZbP8z4atk1zuZ+SHJvkS0lua7bnvc3yrUluauq+\nOsnRzfJjmuv7mttPnVpxkz7HzBrPR7MB+DpwGnA0cBtw+ixrGmNbvgmcuGTZXwCXNJcvAd436zqX\nqf9lwHbgzpXqB84DPgcEOAu4adb1r3J73gP8yYB1T29+944Btja/kxtmvQ1LatwMbG8uPwP4WlP3\nPO+jYds0l/upea6f3lw+Cripee6vAXY1yz8C/H5z+c3AR5rLu4Crp1XbrEf0ZwL7qur+qvoxcBWw\nc8Y1TdJO4PLm8uXA62ZYy7Kq6ovAd5YsHlb/TuAT1XMjcFySzetT6eoM2Z5hdgJXVdWPquobwD56\nv5utUVUHq+orzeXvA/cAJzPf+2jYNg3T6v3UPNf/3Vw9qvkq4BXAtc3ypfvoyL67Fjg7Uzq50qyD\n/mTgwb7r+1l+R7dZAZ9PcnOSi5plm6rqYHP5IWDTbEob2bD653m/vaWZyrisbyptrran+Rf/RfRG\njJ3YR0u2CeZ0PyXZkORW4BBwHb3/Oh6tqsPNKv01P749ze2PAc+aRl2zDvoueWlVbQfOBS5O8rL+\nG6v3/9ncHuI07/U3Pgw8G3ghcBD469mWs3ZJng58EnhbVX2v/7Z53UcDtmlu91NV/aSqXghsofff\nxvNmXBIw+6A/AJzSd31Ls2zuVNWB5vsh4NP0dvLDR/5dbr4fml2FIxlW/1zut6p6uHkh/hT4KE/8\n2z8X25PkKHqBeEVVfapZPNf7aNA2zft+AqiqR4EbgBfTmzY7cgLJ/pof357m9mcC/zWNemYd9F8G\ntjXvSh9N7w2JPTOuac2SPC3JM45cBl4F3ElvWy5oVrsA+MxsKhzZsPr3AG9sjuw4C3isb/qgtZbM\nUf86vX0Eve3Z1RwFsRXYBnxpvetbTjN3+3Hgnqp6f99Nc7uPhm3TvO6nJCclOa65/BTglfTed7gB\nOL9Zbek+OrLvzge+0PxXNnkteKf6PHrvtn8deNes6xlxG06jdzTAbcBdR7aD3nzb9cB9wL8BJ8y6\n1mW24Up6/yb/L715xAuH1U/v6IK/bfbZHcCOWde/yu35x6be2+m9yDb3rf+uZnvuBc6ddf0Dtuel\n9KZlbgdubb7Om/N9NGyb5nI/AS8AbmnqvhN4d7P8NHp/kPYB/wQc0yw/trm+r7n9tGnV5idjJanj\nZj11I0maMoNekjrOoJekjjPoJanjDHpJ6jiDXpI6zqCXpI4z6CWp4/4PRTUQgbctFXEAAAAASUVO\nRK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7ff23779fb90>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Identify pixels above the threshold\n",
-    "# Threshold of RGB > 160 does a nice job of identifying ground pixels only\n",
-    "def color_thresh(img, rgb_thresh=(160, 160, 160)):\n",
-    "    # Create an array of zeros same xy size as img, but single channel\n",
-    "    color_select = np.zeros_like(img[:,:,0])\n",
-    "    # Require that each pixel be above all three threshold values in RGB\n",
-    "    # above_thresh will now contain a boolean array with \"True\"\n",
-    "    # where threshold was met\n",
-    "    above_thresh = (img[:,:,0] > rgb_thresh[0]) \\\n",
-    "                & (img[:,:,1] > rgb_thresh[1]) \\\n",
-    "                & (img[:,:,2] > rgb_thresh[2])\n",
-    "    # Index the array of zeros with the boolean array and set to 1\n",
-    "    color_select[above_thresh] = 1\n",
-    "    # Return the binary image\n",
-    "    return color_select\n",
-    "\n",
-    "threshed = color_thresh(image)\n",
-    "plt.imshow(threshed, cmap='gray')\n",
-    "#scipy.misc.imsave('../output/warped_threshed.jpg', threshed*255)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {
     "scrolled": true
@@ -238,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -335,7 +289,10 @@
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "initial_coords = (_,_) # <- get from telemetry once at beginning\n",
+    "current_coords = (_,_) # <- get from telemetry each time"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,6 +315,13 @@
     "main_map[:,:,0][origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2] = 100*np.bitwise_or(\n",
     "    main_map[:,:,0][origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2], ground_warped.astype(np.int8))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -459,7 +423,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NASARover():\n",
+    "    def __init__():\n",
+    "        pass\n",
+    "    def create_main_map():\n",
+    "        pass\n",
+    "    def update_map():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_map(main_map, current_view, current_coords):\n",
+    "    # add walls to current_map_section\n",
+    "    main_map[:,:,1][current_coords[0]-x_half:\n",
+    "                    current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
+    "        main_map[:,:,1][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
+    "                        current_coords[1]+y_half*2], walls_warped.astype(np.int8))\n",
+    "\n",
+    "    main_map[:,:,0][current_coords[0]-x_half:\n",
+    "                    current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
+    "        main_map[:,:,0][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
+    "                        current_coords[1]+y_half*2], ground_warped.astype(np.int8))\n"
+   ]
   },
   {
    "cell_type": "code",
