actual map now exists yay

--- a/code/Rover_Scratch_Space.ipynb
+++ b/code/Rover_Scratch_Space.ipynb
@@ -47,25 +47,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import mpld3\n",
-    "# from mpld3 import plugins\n",
-    "# plugins.connect(image, plugins.MousePosition(fontsize=14))\n",
-    "# mpld3.enable_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": false
@@ -313,63 +294,8 @@
     "\n",
     "# add path current_map_section\n",
     "main_map[:,:,0][origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2] = 100*np.bitwise_or(\n",
-    "    main_map[:,:,0][origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2], ground_warped.astype(np.int8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1635626"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "main_map[origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff1ab146b10>"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAADKCAYAAACrHYtRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEsRJREFUeJzt3X+MHOV9x/H3pzaG8KMxDtR1bAtMYiWiURpcizpKRCto\nEnCjOpUQddUWmvpkqSEtaVOlJihp8l/oD2hQW5BjSKGi/CghilWRFNexFFUqBgwGbAhw4actG5Mm\nkDSpIE6+/WOes5fz7t3ezszOr89LOu3u7Nzt89zMfua7z87uo4jAzMza6+eqboCZmZXLQW9m1nIO\nejOzlnPQm5m1nIPezKzlHPRmZi1XWtBLulDSk5ImJW0q63HMzGxmKuM8eknzgKeADwD7gAeA342I\nxwt/MDMzm1FZFf25wGREPBMRrwO3A+tKeiwzM5vB/JL+7lLgxZ7b+4BfHbSypPZ/PPdXqm5ACXb1\nXO/Xv119lo3gjGL+jFXk+XR5xrTbczbTPjb9vun75q6ey3b5bkScPttKZQX9rCRtBDZW9fhj92DV\nDSiBeq7365/6LBvBZ4r5M1aRiXT5mWm352RQKTi1j03f/6bvm6KNIQ9DHjfLCvr9wPKe28vSsiMi\nYjOwGTpS0YvBO2tTBYWFubXTVKhvmXa7EFP73vTn1fTl3kdLG6N/AFgpaYWkBcB6YGtJj2V14CeT\nWW2VUtFHxGFJHwf+A5gH3BQRe8t4rEZpY1U/E1f8VoR+z5lhqnnve0eUNkYfEfcA95T1960m/ISy\nAUodtrE58Sdjx82haDY8V/OFcNBbcUp6crkSbJ5Kq3mH/DEc9FXo0o7YpfckrFijVvN2DAe95ecn\nl9VFl4qoOXDQV8U7pLVUIcM2ruYL5aA3M2u5Ur69cs6N6MInYwdpS897X6H0qbi2YDacCRitou+m\nXRGxeraVXNGbWb3MVPx42GYklX2pmSVVfFq27Aqo2xWW5TABM+8/g+7zPjcjV/RdVEH143Phzarj\noK8DVyNmLgZK5KDvKo9pmnXGyEEvabmkHZIel7RX0hVp+SJJ2yQ9nS5PLa65Leaq3jpqAlfzZctT\n0R8GPhkRZwNrgMslnQ1sArZHxEpge7ptZmYVGTnoI+JARDyUrv8QeIJsrth1wM1ptZuBj+RtZGeM\nu6of8/CNKzezahQyRi/pTOAcYCewOCIOpLsOAouLeAwzax8f+Mcj93n0kk4GvgJ8IiJ+IB0tSyMi\nBn3qtXOTgw+ra7NQmVnpclX0ko4jC/lbI+LutPglSUvS/UuAQ/1+NyI2R8TqYT6+ayXyQcUq4mp+\nfPKcdSPgRuCJiLim566twGXp+mXA10ZvXke1/AwcP8HNxivP0M37gD8AHpO0Oy37NPAF4E5JG4Dn\ngUvyNdFK56nXbMx8sB+vkYM+Iv6LwfFwwah/1xKP1ZtZQfzJWDMbK1fz4+egr7NxDqdUcE69mY2H\ng97MxsYH+Go46OvOb5KaWU4OejvKb/6atZKD3sys5Rz0TeDhG2sBj89Xx0HfFOMK+zEO3/iJbzYe\nDnozK50P6tVy0DeJh3DMbAQOejtW4DNwrDCu5qvnoG+allX1DgGz8uUOeknzJD0s6d/T7RWSdkqa\nlHSHpAX5m2lmTTTSgdyvJgtXREV/Bdl8sVOuBq6NiLcD3wc2FPAY1quFZ+CYHdGyV611kHeGqWXA\nbwJb0m0B5wN3pVU8ObhZR3lYrj7yVvR/D3wK+Fm6/RbglYg4nG7vA5bmfAzrR4yn8nFVb9Z4eaYS\n/DBwKCJ2jfj7GyU9KOnBUdtg7eDKz6xceacS/C1Ja4ETgJ8HvggslDQ/VfXLgP39fjkiNgObASS5\nbhyVZ6KyGvLBu15Grugj4sqIWBYRZwLrgW9GxO8BO4CL02qeHLwNfCAxa7QyzqP/S+DPJU2Sjdnf\nWMJjWC+fpWA14mq+fhRRfbnmoZsClP0fHMPBZEv5D2Fj4KAfq10RsXq2lfzJ2LYoO4h9KLYhOOTr\nyUFvZtZyDvo2cVVvFXI1X18OeqsNB4VZORz0beMzcKwCPkjXm4PezKzlHPQ2Nx6nN2scB30befjG\nxsjDNvWX57turKsCtvhgYslcPug2EbgQqYCDvq36fdmZn2BWoQnwPlgRD920WYlPKr9ct7nw/lIt\nB32X+I1Us07KO5XgQkl3Sfq2pCckvVfSIknbJD2dLk8tqrE2Ar9Utoq5mq9e3or+i8A3IuKdwC+T\nTRK+CdgeESuB7em21UWBVb2fwGbNkGcqwTcD55G+bz4iXo+IV4B1ZJOCgycHrwdX9VYRFwP1kKei\nXwG8DHxZ0sOStkg6CVgcEQfSOgeBxXkbaQVzVW/WKXmCfj6wCrg+Is4BfsS0YZrIZjXpGyueHHzM\nXNXbmLkIqI88Qb8P2BcRO9Ptu8iC/yVJSwDS5aF+vxwRmyNi9TCzo1gJfAaOWWfkmRz8IPCipHek\nRRcAjwNbySYFB08OXi8lVfWu3Gw67xP1kveTsX8C3CppAfAM8FGyg8edkjYAzwOX5HwMK4s/jm7W\nCbmCPiJ2A/2GXi7I83etRP2+GsGsQK7m68efjO26gkLfT26z+nLQd5GHa6wkPuDXk4PeCuMnuVk9\nOei7qreq95i9FcAH+vpy0JuZtZyD3sys5Rz0XVbC8I1fvneTt3u9OejNLBeHfP056LvOb8qatZ6D\n3grnCq87vK2bwUFvrurNWs5Bb5mCPy3rSq/9vI2bI+/k4H8maa+kPZJuk3SCpBWSdkqalHRH+mZL\na5KB08WYWRPlmTN2KfCnwOqIeBcwD1gPXA1cGxFvB74PbCiioTYG/g4cG5Kr+WbJO3QzH3iTpPnA\nicAB4Hyy2abAk4M3W86q3mFgVg8jfx99ROyX9LfAC8D/AfcCu4BXIuJwWm0fsDR3K218+nxf/ZZK\nGmJmRckzdHMqsA5YAbwVOAm4cA6/78nB60o9P2bWeHmGbn4DeDYiXo6InwB3A+8DFqahHIBlwP5+\nv+zJwZvDQzDWy/tD8+QJ+heANZJOlCSOTg6+A7g4rePJwc3MKqaI0d9xk/R54HeAw8DDZAf7pcDt\nwKK07Pcj4rVZ/o5P5msAj9V3myv5Wto1zKhIrqAvioO+GRz03eagr6Whgt6fjLWh+YneXd72zeag\nNzNrOQe9zYkru+7xNm8+B72ZWcs56G3OXOF1h7d1OzjozcxazkFvZtZyDnobiV/St5+3cXs46M3s\nGA75dnHQ28gcBmbN4KA3szfwAbx9HPSWi0PBrP5mDXpJN0k6JGlPz7JFkrZJejpdnpqWS9J1aWLw\nRyWtKrPxZlYsH7jbaZiK/p85duaoTcD2iFgJbE+3AS4CVqafjcD1xTTT6szhYFZvswZ9RHwL+N60\nxevIJv6GN04Avg64JTL3kc02taSoxlr9bMFfX1xXcz0A+4DdXqOO0S+OiAPp+kFgcbq+FHixZz1P\nDm5WAYe29cr9ZmxkM5fMeeIQTw7eDg6UdvB2bLdRg/6lqSGZdHkoLd8PLO9Zz5ODm1XEQ2o2ZdSg\n30o28Te8cQLwrcCl6eybNcCrPUM81lKuButjAo/N27Hmz7aCpNuAXwdOk7QP+CvgC8CdkjYAzwOX\npNXvAdYCk8CPgY+W0GYzm4WreevlycGtMA6XavVW5sNuC1fzjTfU5OCzVvRm1hxzOdg65LvDX4Fg\nhXFwVMf/e5uJg96sg3xg6BYHvRXKAVIdv0digzjozRrOp1PabBz0ZmYt56C3wrliHD8P29hMHPRm\nDeZhGxuGg95K4UAp3wRADK7mR/k6BGsnB71ZC/ULeId+dznorTQOlvJMVfNo5vU8dm/gr0Awa7Tp\nQT7o+2580O22UScH/xtJ304TgH9V0sKe+65Mk4M/KelDZTXcmsEBU6JZqnmzKaNODr4NeFdEvBt4\nCrgSQNLZwHrgl9Lv/JOkeYW11sxmfRMWXM3bG400OXhE3BsRh9PN+8hmkoJscvDbI+K1iHiW7Hvp\nzy2wvdZADprx8P/ZBinizdg/Ar6erg89ObjnjO0Wh1AxjlTzA4ZttuBq3o6V681YSVcBh4Fb5/q7\nEbEZ2Jz+jiceMcvBp1PaTEYOekl/CHwYuCCOTlM19OTg1j1TweNT/nKYpZo362ekoJd0IfAp4Nci\n4sc9d20F/lXSNcBbgZXA/blbaWbZgbJPyE+kMmvCZ+HYAMOcXnkb8N/AOyTtSxOC/wNwCrBN0m5J\nNwBExF7gTuBx4BvA5RHx09Jab43kIYUSOORtBp4c3CrhYYa5GTTsNVXNO+g7a6jJwf0VCFYJV/Uj\nGFQOOeRtFg56s4aY/ibshF8H25Ac9FYZV/XDmfH/5GrehuCgN2uAgWPzZkNw0FulXNXPzNW8FcFB\nb2bWcg56s4bxsI3NlYPeKtfU4ZtxtXvgZw6CwadcmvVw0Js1yDHVvMfpbQgOequFplb1ZZpglk8Q\nO+RtSA56sxGN+2scPDZvo3LQW224qj/K1bwVaaTJwXvu+6SkkHRaui1J16XJwR+VtKqMRpt1jQ+C\nlseok4MjaTnwQeCFnsUXkX0H/UpgI3B9/iZalzjQBvwPeodtXM3bHI00OXhyLdnkI7274Drglsjc\nByyUtKSQlpp1iOd9tSKNNEYvaR2wPyIemXaXJwe33Bxs07iat5zmHPSSTgQ+DXw2zwNHxOaIWD3M\nl+ab1U1ZB6Ppb8L6oGdFGKWifxuwAnhE0nNkE4A/JOkX8eTgVhAHXOJq3gow56CPiMci4hci4syI\nOJNseGZVRBwkmxz80nT2zRrg1Yg4UGyTrSu6Fvau5q0so04OPsg9wDPAJPAl4GOFtNKsZsr4sNQx\nf9PVvBXEk4Nb7XVxIvEJcNDbMDw5uFljOeStQA56q72ujVW/ob8OeSuAg96sbjyQaQVz0Fsj1LGq\nL6NNE5BV8VM/ZgVw0JuNqItvElszOejNzFrOQW+NUcfhG7MmcNCb1YQPZFYWB701Sp3CsOi2bMHj\n/lYOB73ZCGad6s+sRhz01jh1quqL1ua+WXUc9GbJXEJ2yxzXN6uSg94aqeqQLWPopuo+WXs56M3M\nWs5Bb41VZQXsat6apC7fR/8y8CPgu1W3pUCn4f7UXdv65P7UX9F9OiMiTp9tpVoEPYCkB9s0Ubj7\nU39t65P7U39V9clDN2ZmLeegNzNruToF/eaqG1Aw96f+2tYn96f+KulTbcbozcysHHWq6M3MrASV\nB72kCyU9KWlS0qaq2zMqSc9JekzSbkkPpmWLJG2T9HS6PLXqdg4i6SZJhyTt6VnWt/3KXJe22aOS\nVlXX8v4G9OdzkvanbbRb0tqe+65M/XlS0oeqafVgkpZL2iHpcUl7JV2Rljd5Gw3qUyO3k6QTJN0v\n6ZHUn8+n5Ssk7UztvkPSgrT8+HR7Mt1/ZmmNi4jKfoB5wHeAs4AFwCPA2VW2KUdfngNOm7bsr4FN\n6fom4Oqq2zlD+88DVgF7Zms/sBb4OtmspmuAnVW3f8j+fA74iz7rnp32veOBFWmfnFd1H6a1cQmw\nKl0/BXgqtbvJ22hQnxq5ndL/+uR0/ThgZ/rf3wmsT8tvAP44Xf8YcEO6vh64o6y2VV3RnwtMRsQz\nEfE6cDuwruI2FWkdcHO6fjPwkQrbMqOI+BbwvWmLB7V/HXBLZO4DFkpaMp6WDmdAfwZZB9weEa9F\nxLPAJNm+WRsRcSAiHkrXfwg8ASyl2dtoUJ8GqfV2Sv/r/003j0s/AZwP3JWWT99GU9vuLuACSaVM\nCV910C8FXuy5vY+ZN3SdBXCvpF2SNqZliyPiQLp+EFhcTdNGNqj9Td5uH09DGTf1DKU1qj/pJf45\nZBVjK7bRtD5BQ7eTpHmSdgOHgG1krzpeiYjDaZXeNh/pT7r/VeAtZbSr6qBvk/dHxCrgIuBySef1\n3hnZ67PGnuLU9PYn1wNvA94DHAD+rtrmzJ2kk4GvAJ+IiB/03tfUbdSnT43dThHx04h4D7CM7NXG\nOytuElB90O8HlvfcXpaWNU5E7E+Xh4Cvkm3kl6ZeLqfLQ9W1cCSD2t/I7RYRL6Un4s+AL3H0ZX8j\n+iPpOLJAvDUi7k6LG72N+vWp6dsJICJeAXYA7yUbNpuf7upt85H+pPvfDPxPGe2pOugfAFamd6UX\nkL0hsbXiNs2ZpJMknTJ1HfggsIesL5el1S4DvlZNC0c2qP1bgUvTmR1rgFd7hg9qa9oY9W+TbSPI\n+rM+nQWxAlgJ3D/u9s0kjd3eCDwREdf03NXYbTSoT03dTpJOl7QwXX8T8AGy9x12ABen1aZvo6lt\ndzHwzfSqrHg1eKd6Ldm77d8Brqq6PSP24SyyswEeAfZO9YNsvG078DTwn8Ciqts6Qx9uI3uZ/BOy\nccQNg9pPdnbBP6Zt9hiwuur2D9mff0ntfZTsSbakZ/2rUn+eBC6quv19+vN+smGZR4Hd6Wdtw7fR\noD41cjsB7wYeTu3eA3w2LT+L7IA0CfwbcHxafkK6PZnuP6ustvmTsWZmLVf10I2ZmZXMQW9m1nIO\nejOzlnPQm5m1nIPezKzlHPRmZi3noDczazkHvZlZy/0/QgkvVH83Fx8AAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7ff1ab2b2b50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "    main_map[:,:,0][origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2], ground_warped.astype(np.int8))\n",
+    "\n",
     "plt.imshow(main_map[origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2])"
    ]
   },
@@ -429,7 +355,12 @@
     "        pass\n",
     "    def create_main_map():\n",
     "        pass\n",
-    "    def update_map():"
+    "    def update_map():\n",
+    "        pass\n",
+    "    def make_decision_for_next_point_state_machine():\n",
+    "        pass\n",
+    "    def create_control_inputs_for_next_cycle():\n",
+    "        pass"
    ]
   },
   {
@@ -439,16 +370,19 @@
    "outputs": [],
    "source": [
     "def update_map(main_map, current_view, current_coords):\n",
-    "    # add walls to current_map_section\n",
+    "    # add walls to current_map section\n",
     "    main_map[:,:,1][current_coords[0]-x_half:\n",
     "                    current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
     "        main_map[:,:,1][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
     "                        current_coords[1]+y_half*2], walls_warped.astype(np.int8))\n",
     "\n",
+    "    # add path to current map section\n",
     "    main_map[:,:,0][current_coords[0]-x_half:\n",
     "                    current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
     "        main_map[:,:,0][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
-    "                        current_coords[1]+y_half*2], ground_warped.astype(np.int8))\n"
+    "                        current_coords[1]+y_half*2], ground_warped.astype(np.int8))\n",
+    "    \n",
+    "    plt.imshow(main_map[origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2])"
    ]
   },
   {
@@ -456,14 +390,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def make_decision_for_next_point_state_machine():\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_control_inputs_for_next_cycle():\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
