actual map now exists yay

--- a/code/Rover_Scratch_Space.ipynb
+++ b/code/Rover_Scratch_Space.ipynb
@@ -370,6 +370,8 @@
    "outputs": [],
    "source": [
     "def update_map(main_map, current_view, current_coords):\n",
+    "    # TODO: STILL NEED TO ROTATE THE COORDINATES AND TRANSLATE THEM AS WELL\n",
+    "    \n",
     "    # add walls to current_map section\n",
     "    main_map[:,:,1][current_coords[0]-x_half:\n",
     "                    current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
@@ -392,6 +394,19 @@
    "outputs": [],
    "source": [
     "def make_decision_for_next_point_state_machine():\n",
+    "    if not stopped:\n",
+    "        if wall within stopping distance:\n",
+    "            stop or (not likely) tight turn\n",
+    "        else: \n",
+    "            create a random number between 0 and 2pi \n",
+    "            find corresponding vector n meters away \n",
+    "            checkk if vector is in wall and if so reguess\n",
+    "            otherwise accept with a probability related to the dot product of that vector and current trajectory vector\n",
+    "            take point along vector much closer to rover\n",
+    "            turn that many degrees either at once or over a few frames\n",
+    "    else: \n",
+    "        do same thing for else above but maybe with large n meter parameter\n",
+    "        but then turn in place and then need to accelerate to speed\n",
     "    pass"
    ]
   },
