actual map now exists yay

--- a/code/Rover_Scratch_Space.ipynb
+++ b/code/Rover_Scratch_Space.ipynb
@@ -413,7 +413,7 @@
     "class NASARover():\n",
     "    def __init__(self, init_coords, init_yaw):\n",
     "        self.init_coords = init_coords\n",
-    "        self.unit_angle = init_yaw\n",
+    "        self.init_yaw = init_yaw\n",
     "\n",
     "        # main map, 10 elements per meter simulation world, estimated necessary size, see below for \n",
     "        #  potential expanding version implementation below\n",
@@ -427,22 +427,73 @@
     "        self.current_coords = None\n",
     "        self.current_yaw = None\n",
     "        \n",
-    "    def update_map():\n",
-    "        # TODO: STILL NEED TO ROTATE THE COORDINATES AND TRANSLATE THEM AS WELL\n",
+    "        self.current_view = None\n",
+    "        \n",
+    "        self.rock_locs = None\n",
     "    \n",
+    "    \n",
+    "    def perspective_transform(self, img, src, dst):           \n",
+    "        M = cv2.getPerspectiveTransform(src, dst)\n",
+    "        warped = cv2.warpPerspective(img, M, (img.shape[1], img.shape[0]))# keep same size as input image\n",
+    "        return warped\n",
+    "    \n",
+    "    def process_image():\n",
+    "        hsv_image = cv2.cvtColor(frame, cv2.COLOR_RGB2HSV)\n",
+    "        lower_trad_hsv = [10.,0.,75.]     # gpick uses different scale for HSV values than cv2\n",
+    "        upper_trad_hsv = [70.,18.,100.]\n",
+    "        lower_ground = np.array([lower_trad_hsv[0] / 2,(lower_trad_hsv[1] / 100) * 255, (lower_trad_hsv[2] / 100) * 255])\n",
+    "        upper_ground = np.array([upper_trad_hsv[0] / 2,(upper_trad_hsv[1] / 100) * 255, (upper_trad_hsv[2] / 100) * 255])\n",
+    "\n",
+    "#         lower_trad_hsv = [5.,5.,40.]\n",
+    "#         upper_trad_hsv = [45.,15.,60.]\n",
+    "#         lower_sky = np.array([lower_trad_hsv[0] / 2,(lower_trad_hsv[1] / 100) * 255, (lower_trad_hsv[2] / 100) * 255])\n",
+    "#         upper_sky = np.array([upper_trad_hsv[0] / 2,(upper_trad_hsv[1] / 100) * 255, (upper_trad_hsv[2] / 100) * 255])\n",
+    "\n",
+    "        ground_mask = cv2.inRange(hsv_image, lower_ground, upper_ground).astype(np.bool)\n",
+    "#         sky_mask = cv2.inRange(hsv_image, lower_sky, upper_sky).astype(np.bool)\n",
+    "#         walls_mask = np.bitwise_not(np.bitwise_or(ground_mask, sky_mask))\n",
+    "\n",
+    "        ground_out = ground_mask.astype(np.float32)\n",
+    "#         walls_out = walls_mask.astype(np.float32)\n",
+    "        \n",
+    "        # a lot of this can be moved to an init\n",
+    "        map_grid_side = 10 # each 10x10 pixel sq reps 1 m**2\n",
+    "        dst_size = map_grid_side / 2 \n",
+    "        bottom_offset = 2 # offset to account for bottom space in camera image \n",
+    "        source = np.float32([[118, 99], [203, 99], [182, 90], [136, 90]])\n",
+    "        destination = np.float32([\n",
+    "            [image.shape[1]/2 - dst_size, image.shape[0] + map_grid_side - bottom_offset],\n",
+    "            [image.shape[1]/2 + dst_size, image.shape[0] + map_grid_side - bottom_offset],\n",
+    "            [image.shape[1]/2 + dst_size, image.shape[0] - map_grid_side - 2*dst_size - bottom_offset], \n",
+    "            [image.shape[1]/2 - dst_size, image.shape[0] - map_grid_side - 2*dst_size - bottom_offset],\n",
+    "        ])\n",
+    "        ground_warped = self.perspective_transform(ground_out, source, destination)\n",
+    "#         walls_warped = self.perspective_transform(walls_out, source, destination)\n",
+    "\n",
+    "        plt.imshow(ground_warped, cmap='gray')\n",
+    "        # plt.imshow(walls_warped, cmap='gray')\n",
+    "        #scipy.misc.imsave('../output/warped_example.jpg', warped)\n",
+    "\n",
+    "\n",
+    "    def update_map(main_map, current_view, current_coords):\n",
+    "        # angle subtraction may be tricky\n",
+    "        yaw_diff = self.init_yaw - self.current_yaw\n",
+    "        transed = transform.rotate(ground_warped, angle=-25, resize=False, center=(160, 160), order=1, mode='constant', cval=0, clip=True, preserve_range=True)\n",
+    "\n",
     "        # add walls to current_map section\n",
-    "        main_map[:,:,1][current_coords[0]-x_half:\n",
+    "        self.main_map[:,:,1][current_coords[0]-x_half:\n",
     "                        current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
-    "            main_map[:,:,1][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
+    "            self.main_map[:,:,1][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
     "                            current_coords[1]+y_half*2], walls_warped.astype(np.int8))\n",
     "\n",
     "        # add path to current map section\n",
-    "        main_map[:,:,0][current_coords[0]-x_half:\n",
+    "        self.main_map[:,:,0][current_coords[0]-x_half:\n",
     "                        current_coords[0]+x_half, current_coords[1]:current_coords[1]+y_half*2] = np.bitwise_or(\n",
-    "            main_map[:,:,0][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
+    "            self.main_map[:,:,0][current_coords[0]-x_half:current_coords[0]+x_half, current_coords[1]:\n",
     "                            current_coords[1]+y_half*2], ground_warped.astype(np.int8))\n",
     "\n",
-    "        plt.imshow(main_map[origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2])\n",
+    "#         plt.imshow(main_map[origin[0]-x_half:origin[0]+x_half, origin[1]:origin[1]+y_half*2]\n",
+    "  \n",
     "    def make_decision_for_next_point_state_machine():\n",
     "        pass\n",
     "    def create_control_inputs_for_next_cycle():\n",
